# Outspamer

./: .flake8  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  send_emails.py  send_emails_gui.py  settings.toml  webapp.py
Archive/: MAIN.py
leads/: Mukran_Outreach.xlsx  results_workable_1.xlsx  sample_leads.xlsx
mailer/: __init__.py  outlook.py  postmark.py  sendgrid.py  settings.py  template_utils.py  utils.py
templates/: Mukran_template_notion_export.html  Mukran_template_notion_export_ar.html  Mukran_template_notion_export_de.html  Mukran_template_notion_export_en.html  Mukran_template_notion_export_es.html  Mukran_template_notion_export_fr.html  Mukran_template_notion_export_id.html  Mukran_template_notion_export_it.html  Mukran_template_notion_export_ja.html  Mukran_template_notion_export_jp.html  Mukran_template_notion_export_ko.html  Mukran_template_notion_export_nl.html  Mukran_template_notion_export_pl.html  Mukran_template_notion_export_pt.html  Mukran_template_notion_export_ru.html  Mukran_template_notion_export_sv.html  Mukran_template_notion_export_tr.html  Mukran_template_notion_export_zh.html  Mulch_en.html  email_de.html  email_en.html  email_fr.html  webform.html
tests/: test_schedule.py  test_utils.py
